fixed centering on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1404,9 +1404,8 @@ h6 {
 
 @media screen and (max-width: 460px) {
 
-    .features, .mission {
+    .center {
       text-align: center;
-
     }
 
     .features .icon {
